app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: app
          image: ghcr.io/projet-infra-orleans/pandemic-infra/app:v3.1.1
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          limit:
            memory: 500Mo
      imagePullSecrets:
        - name: github-packages-secret
