app/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-deployment
