app/domain-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.gr1.froissant.work
      secretName: tls-app-secret
  rules:
    - host: app.gr1.froissant.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
